# NetoworkPosture

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  lambda_handler.py  main.py
backend/app/api/: cis_results.py  deps.py  devices.py  firewall_rules.py  health.py  ingest.py  scans.py  schedules.py
backend/app/benchmarks/: __init__.py  _helpers.py  base.py  engine.py
backend/app/benchmarks/checks/: cis_net_001_insecure_protocols.py  cis_net_002_ssh_management_subnet.py  cis_net_003_weak_snmp.py  cis_net_004_open_sensitive_ports.py  cis_net_005_egress_filtering.py  cis_net_006_remote_logging.py  cis_net_007_stateful_firewall.py  cis_net_008_legacy_tls.py
backend/app/core/: logging.py  security.py  settings.py
backend/app/models/: __init__.py  device.py  findings.py  firewall.py  ingest.py  schedule.py
backend/app/parsers/: __init__.py  aws_sg.py  cisco.py  iptables.py
backend/app/samples/aws-sg/: restrictive.json
backend/app/samples/cisco/: legacy-edge.cfg
backend/app/samples/iptables/: hardened.rules  permissive.rules
backend/app/services/: discovery.py  orchestrator.py  report_pdf.py  scheduler.py  storage.py
backend/tests/: conftest.py  test_api.py  test_benchmarks.py  test_parsers.py  test_pdf_and_schedules.py  test_scans_api.py
docs/: architecture.md  benchmarks.md  cis-mapping.md  data-flow.md  design-decisions.md  discovery.md  edge-cases.md  frontend.md  threat-model.md
frontend/: .env.production  index.html  package-lock.json  (+4 more)
(+48 files in other folders)
